--- a/app/roon-web-ng-client/src/app/components/settings-dialog/settings-dialog.component.scss
+++ b/app/roon-web-ng-client/src/app/components/settings-dialog/settings-dialog.component.scss
@@ -134,3 +134,10 @@
   border-top: 1px solid;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
+
+.audio-tab-content {
+  min-height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
