Improve AI Search Dialog Input Accessibility
- Add type and inputmode attributes to search input for better mobile keyboard support
- Introduce template reference variable for search input
- Enhance input field with additional attributes for improved user interaction

--- a/app/roon-web-ng-client/src/app/components/roon-aisearch-dialog/roon-aisearch-dialog.component.html
+++ b/app/roon-web-ng-client/src/app/components/roon-aisearch-dialog/roon-aisearch-dialog.component.html
@@ -7,9 +7,12 @@
         <mat-label>What would you like to listen to?</mat-label>
         <input
           matInput
+          type="text"
+          inputmode="text"
           [(ngModel)]="searchQuery"
           (keyup.enter)="performSearch()"
           [disabled]="transcribing"
+          #searchInput
         />
         <button
           *ngIf="searchQuery"
