Add UK Chart Scraper and Unmatched Tracks Analysis Infrastructure
- Implement UK chart data scraping functionality using Axios and Cheerio
- Create unmatched tracks analyzer for tracking and managing track matching issues
- Add scheduled tasks for periodic cleanup of unmatched tracks data
- Enhance track model with error tracking and auto-correction capabilities
- Update UI components to display track matching errors and corrections
- Improve string normalization and album matching utilities
- Add comprehensive logging and error handling for chart data retrieval

--- a/app/roon-web-ng-client/src/app/components/not-found-tracks-dialog/not-found-tracks-dialog.component.html
+++ b/app/roon-web-ng-client/src/app/components/not-found-tracks-dialog/not-found-tracks-dialog.component.html
@@ -2,8 +2,27 @@
 <mat-dialog-content>
   <p>The following tracks were not found:</p>
   <mat-list>
-    <mat-list-item *ngFor="let track of data">
-      {{ track.track }} by {{ track.artist }}
+    <mat-list-item *ngFor="let track of data" class="track-item">
+      <div class="track-info">
+        <div class="track-title">{{ track.track }} by {{ track.artist }}</div>
+        <div class="track-album-info">
+          <span class="album-label">Album: </span> 
+          <span class="album-name">{{ track.album || 'Unknown' }}</span>
+          <mat-icon *ngIf="track.wasAutoCorrected" 
+            class="corrected-icon" 
+            matTooltip="Album was automatically corrected">
+            auto_fix_high
+          </mat-icon>
+        </div>
+        <div *ngIf="track.correctionMessage" class="track-correction">
+          <mat-icon class="info-icon">info</mat-icon>
+          <span>{{ track.correctionMessage }}</span>
+        </div>
+        <div *ngIf="track.error && !track.wasAutoCorrected" class="track-error">
+          <mat-icon class="error-icon">error</mat-icon>
+          <span>{{ track.error }}</span>
+        </div>
+      </div>
     </mat-list-item>
   </mat-list>
 </mat-dialog-content>
